--- a/kotlin-agendacalendarview/src/main/res/layout/view_day_calendar_header.xml
+++ b/kotlin-agendacalendarview/src/main/res/layout/view_day_calendar_header.xml
@@ -1,10 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <TextView xmlns:android="http://schemas.android.com/apk/res/android"
-          android:layout_width="0dip"
-          android:layout_height="match_parent"
-          android:layout_weight="1"
-          android:textColor="@android:color/white"
-          android:textSize="11dp"
-	android:padding="4dp"
-          android:gravity="center"
-		></TextView>
+    android:layout_width="0dip"
+    android:layout_height="match_parent"
+    android:layout_weight="1"
+    android:gravity="center"
+    android:padding="4dp"
+    android:textColor="@android:color/white"
+    android:textSize="11dp"></TextView>
