--- a/app/src/main/res/layout/view_agenda_empty_event.xml
+++ b/app/src/main/res/layout/view_agenda_empty_event.xml
@@ -3,10 +3,7 @@
               android:orientation="vertical"
               android:background="@color/white"
               android:layout_width="match_parent"
-              android:layout_height="wrap_content"
-	android:clickable="true"
-	android:focusable="true"
-		>
+              android:layout_height="wrap_content">
 
 	<TextView
 			android:text="@string/no_events"
