--- a/kotlin-agendacalendarview/src/main/res/layout/view_agenda.xml
+++ b/kotlin-agendacalendarview/src/main/res/layout/view_agenda.xml
@@ -2,10 +2,15 @@
 <merge
 		xmlns:android="http://schemas.android.com/apk/res/android">
 
+	<LinearLayout
+		android:orientation="vertical"
+		android:layout_width="match_parent"
+		android:layout_height="match_parent">
+
 	<View
 			android:id="@+id/view_shadow"
 			android:layout_width="match_parent"
-			android:layout_height="5dp"
+			android:layout_height="4dp"
 			android:background="@drawable/shadow"
 			>
 	</View>
@@ -27,5 +32,6 @@
 			android:scrollingCache="false"
 			/>
 	</android.support.v4.widget.SwipeRefreshLayout>
+	</LinearLayout>
 
 </merge>
