--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,5 +5,6 @@
     <color name="colorAccent">#FF4081</color>
 
     <color name="main_blue">#3fa2f9</color>
+    <color name="black">#000000</color>
 
 </resources>
